Edit the sheets to match the Exd6 Messenger module

--- a/templates/formapplications/minichar.hbs
+++ b/templates/formapplications/minichar.hbs
@@ -38,14 +38,14 @@
     </section>
     <div style="clear:both;"></div>
     <section class="footer-section">
-        <a class="item-control roll" data-rolltype="attack" title="{{localize 'EZD6.RollAttack'}}"><img src="systems/ezd6/assets//icons/gladius.svg" width="25" height="25"/></a>
-        <a class="item-control cast-spell" title="{{localize 'EZD6.RollCast'}}"><img src="systems/ezd6/assets/icons/magic-swirl.svg" width="25" height="25"/></a>
-        <a class="item-control roll-miracle" title="{{localize 'EZD6.RollMiracle'}}"><img src="systems/ezd6/assets/icons/angel-wings.svg" width="25" height="25"/></a>
-        <a class="item-control roll" data-rolltype="task" title="{{localize 'EZD6.RollTaskCheck'}}"><img src="systems/ezd6/assets/icons/dice-six-faces-six.svg" width="25" height="25"/></a>
-        <a class="item-control roll" data-rolltype="wound" title="{{localize 'EZD6.RollWoundSave'}}"><img src="systems/ezd6/assets/icons/shield.svg" width="25" height="25"/></a>
-        <a class="item-control roll" data-rolltype="mental" title="{{localize 'EZD6.RollMentalSave'}}"><img src="modules/ezd6-pts/src/assets/mental.svg" width="25" height="25"/></a>
-        <a class="item-control roll" data-rolltype="miraculous" title="{{localize 'EZD6.RollMiraculousSave'}}"><img src="systems/ezd6/assets/icons/rosa-shield.svg" width="25" height="25"/></a>
-        <a class="item-control roll-magic-resist" title="{{localize 'EZD6.RollMagicResistance'}}"><img src="systems/ezd6/assets/icons/surrounded-shield.svg" width="25" height="25"/></a>
-        <a class="item-control open-sheet" title="{{localize 'EZD6.OpenFullSheet'}}"><img src="systems/ezd6/assets/icons/expand.svg" width="25" height="25"/></a>
+        <a class="item-control roll" data-rolltype="attack" title="{{localize 'EZD6.RollAttack'}}"><img class="mini-item" src="systems/ezd6/assets//icons/gladius.svg" width="25" height="25"/></a>
+        <a class="item-control cast-spell" title="{{localize 'EZD6.RollCast'}}"><img class="mini-item" src="systems/ezd6/assets/icons/magic-swirl.svg" width="25" height="25"/></a>
+        <a class="item-control roll-miracle" title="{{localize 'EZD6.RollMiracle'}}"><img class="mini-item" src="systems/ezd6/assets/icons/angel-wings.svg" width="25" height="25"/></a>
+        <a class="item-control roll" data-rolltype="task" title="{{localize 'EZD6.RollTaskCheck'}}"><img class="mini-item" src="systems/ezd6/assets/icons/dice-six-faces-six.svg" width="25" height="25"/></a>
+        <a class="item-control roll" data-rolltype="wound" title="{{localize 'EZD6.RollWoundSave'}}"><img class="mini-item" src="systems/ezd6/assets/icons/shield.svg" width="25" height="25"/></a>
+        <a class="item-control roll" data-rolltype="mental" title="{{localize 'EZD6.RollMentalSave'}}"><img class="mini-item" src="modules/ezd6-pts/src/assets/mental.svg" width="25" height="25"/></a>
+        <a class="item-control roll" data-rolltype="miraculous" title="{{localize 'EZD6.RollMiraculousSave'}}"><img class="mini-item" src="systems/ezd6/assets/icons/rosa-shield.svg" width="25" height="25"/></a>
+        <a class="item-control roll-magic-resist" title="{{localize 'EZD6.RollMagicResistance'}}"><img class="mini-item" src="systems/ezd6/assets/icons/surrounded-shield.svg" width="25" height="25"/></a>
+        <a class="item-control open-sheet" title="{{localize 'EZD6.OpenFullSheet'}}"><img class="mini-item" src="systems/ezd6/assets/icons/expand.svg" width="25" height="25"/></a>
     </section>
 </form>
