--- a/templates/formapplications/minimonster.hbs
+++ b/templates/formapplications/minimonster.hbs
@@ -9,11 +9,11 @@
             </a>
         </div>
         <div class="command-block">
-            <a class="item-control roll" data-rolltype="attack" title="{{localize 'EZD6.RollAttack'}}"><img src="systems/ezd6/assets/icons/gladius.svg" width="25" height="25"/></a>
-            <a class="item-control roll-monster-magic" title="{{localize 'EZD6.RollMonsterMagic'}}"><img src="systems/ezd6/assets/icons/magic-swirl.svg" width="25" height="25"/></a>
-            <a class="item-control roll" data-rolltype="task" title="{{localize 'EZD6.RollTaskCheck'}}"><img src="systems/ezd6/assets/icons/dice-six-faces-six.svg" width="25" height="25"/></a>
-            <a class="item-control roll-magic-resist" title="{{localize 'EZD6.RollMagicResistance'}}"><img src="systems/ezd6/assets/icons/surrounded-shield.svg" width="25" height="25"/></a>
-            <a class="item-control open-sheet" title="{{localize 'EZD6.OpenFullSheet'}}"><img src="systems/ezd6/assets/icons/expand.svg" width="25" height="25"/></a>
+            <a class="item-control roll" data-rolltype="attack" title="{{localize 'EZD6.RollAttack'}}"><img class="mini-item" src="systems/ezd6/assets/icons/gladius.svg" width="25" height="25"/></a>
+            <a class="item-control roll-monster-magic" title="{{localize 'EZD6.RollMonsterMagic'}}"><img class="mini-item" src="systems/ezd6/assets/icons/magic-swirl.svg" width="25" height="25"/></a>
+            <a class="item-control roll" data-rolltype="task" title="{{localize 'EZD6.RollTaskCheck'}}"><img class="mini-item" src="systems/ezd6/assets/icons/dice-six-faces-six.svg" width="25" height="25"/></a>
+            <a class="item-control roll-magic-resist" title="{{localize 'EZD6.RollMagicResistance'}}"><img class="mini-item" src="systems/ezd6/assets/icons/surrounded-shield.svg" width="25" height="25"/></a>
+            <a class="item-control open-sheet" title="{{localize 'EZD6.OpenFullSheet'}}"><img class="mini-item" src="systems/ezd6/assets/icons/expand.svg" width="25" height="25"/></a>
         </div>
     </section>
 </form>
